--- a/AndrPraktika000/MainWindow.xaml
+++ b/AndrPraktika000/MainWindow.xaml
@@ -7,24 +7,28 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="600" Width="800">
     <Grid>
-        <Button Content="Очистить" HorizontalAlignment="Left" Margin="10,544,0,0" VerticalAlignment="Top" Height="30" Width="61"/>
+        <Button Content="Очистить" HorizontalAlignment="Left" Margin="30,526,0,0" VerticalAlignment="Top" Height="25" Width="740" Click="Button_Click" Grid.ColumnSpan="2"/>
         <Menu Margin="30,27,30,505" Visibility="Visible">
-            <MenuItem ToolTip="Открывает модули программы" Header="Модули">
+            <MenuItem  Header="Модули">
                 <Separator></Separator>
             </MenuItem>
-            <MenuItem ToolTip=" Позволяет изменять настройки главного окна" Header="Настройки" Click="Button_Click1">
+            <MenuItem Header="О программе" Click="Button_Programm">
             </MenuItem>
-            <MenuItem ToolTip="Сведения о программе" Header="О программе" Click="Button_Click2">
+            <MenuItem Header="Добавить текстовый файл" Click="Button_TXT1">
             </MenuItem>
-            <MenuItem ToolTip=" Позволяет добавить текстовый файл "  Header="Добавить текстовый файл" Click="newbutton">
+            <MenuItem Header="Открыть текстовый файл" Click="Button_TXT>
             </MenuItem>
-            <MenuItem ToolTip=" Позволяет открыть текстовый файл "  Header="Открыть текстовый файл" Click="newbutton1">
+            <MenuItem Header="Открыть изображение" Click="Button_PNG">
+            </MenuItem>
+            <MenuItem Name="mp3" Header="Плеер" Click="Button_MP3">
+            </MenuItem>
+            <MenuItem Header="Фон" Click="Button_FON">
             </MenuItem>
         </Menu>
-
-        <WrapPanel Margin="30,111,30,79" >
-            <ListBox x:Name="Andr" Height="50" Width="383"/>
-            <TextBox x:Name="textbox" Height="129" Width="383" TextChanged="textbox_TextChanged"/>
+        <StackPanel Name="stackPanelAdd" Margin="0,111,38,84" HorizontalAlignment="Right" Width="467"/>
+        <WrapPanel Margin="30,111,510,79" >
+            <ListBox x:Name="Andr" Height="50" Width="260"/>
+            <TextBox x:Name="textbox" Height="334" Width="260" TextChanged="textbox_TextChanged"/>
         </WrapPanel>
     </Grid>
 </Window>
